--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_saved">SavedActivity</string>
     <string name="title_activity_view_saved">ViewSavedActivity</string>
+    <string name="title_activity_seetings">SeetingsActivity</string>
 
 </resources>
