Added measurements overview UI, MeasurementActivity.java and created fragments for every measurement group.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,5 +14,7 @@
     <string name="name">Name</string>
     <string name="gender">Gender</string>
     <string name="unit">Unit</string>
+    <string name="title_activity_measurement">MeasurementActivity</string>
+    <string name="title_activity_item">ItemActivity</string>
 
 </resources>
